[tool.poetry]
name = "ito.upload-api"
version = "0.1.0"
description = "Public API for supplying and verifying pseudonyms of users confirmed infected"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dateutil = "^2.8.1"
pymongo = "^3.10.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
mypy = "^0.770"
pytest-flask = "^1.0.0"
pytest-mongodb = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
